# learning_projects

./: main.py  pyproject.toml
darija_ocr/: config.yaml  requirements.txt  run_training.sh  train.py
docling/: docling.ipynb
ocr_vlm/: image_to_patches.ipynb
pytorch/: model.pth  torch101.ipynb  tricks.ipynb
scrappers/: Untitled.ipynb  comments.json  facebook_post_links.json  links.py  links_extractor.py  main.py  post_comments.json  post_links.json  post_scraper.py  scrapper.py  utils.py
yolo/: yolo.ipynb
