[project]
name = "study-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asitop>=0.0.24",
    "docling>=2.40.0",
    "ipykernel>=6.29.5",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
    "ultralytics>=8.3.162",
]
